--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ cmake-build-debug
 .direnv
 .pytest_cache
 
+# Editor junk
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
